--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@ function onWatchSuccess(position)
 						<div style='position:absolute; left:-16px; top:-16px; width:32px; height:32px; z-index:104;'>
 							<img src='taxizm.png'>
 						</div>
-						<div id='taxitext'></div>
+						<div id='taxitext' style='position:absolute; left:-40px; top:16px;'></div>
 					</div>
 				</div>
 
