--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@ function MainProg()
 	console.log("main prog");
 	if (started==1)
 		{	
+		console.log("I am running");
 		updatacounter++;
 		if (updatacounter>uplimit)
 			{
@@ -321,7 +322,8 @@ function Start()
 	if (started==0)
 		{started=1;  MainProg();}  // document.getElementById('mainb').innerHTML="STOP";
 	else
-		{started=0;} //  document.getElementById('mainb').innerHTML="START";
+		{//started=0;
+		} //  document.getElementById('mainb').innerHTML="START";
 
 	}
 
