--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ var updatacounter=0;
 var uplimit=5;
 function MainProg()
 	{
-	console.log("main prog");
+	console.log("main prog: "+started);
 	if (started==1)
 		{	
 		console.log("I am running");
@@ -178,8 +178,9 @@ function MainProg()
 			setmypos();
 			}
 			
-		setTimeout("MainProg();",1000);
+
 		}
+		setTimeout("MainProg();",1000);
 	}
 
 var taxilong=0;
