--- a/index.html
+++ b/index.html
@@ -455,15 +455,15 @@ function onWatchSuccess(position)
 		
 <div  style='position:fixed; left:0px; top:0px; width:100%; height:50px; background-color:white; z-index:211; ' >
 	<a style='float:left; margin-top:7px; margin-left: 7px;'  href='Javascript: show_settings();'><img src='but_info.png'></a>
-	<div id='infodiv' style='float:right;  color:Black; display:none;'></div>
+<!--	<div id='infodiv' style='float:right;  color:Black; display:none;'></div>-->
 	<a style='float:right; margin-top:7px; margin-right: 7px; ' href='Javascript: show_settings();' id='regbut' ><img src='but_register.png'></a>
 
 
 </div>
 		<!-- MAIN MAP -->
-<div id='charcho' style='position:fixed; left:0px; top:50px; width:365px; height:600px; border:1px solid red; z-index:1;' >
+<div id='charcho' style='position:fixed; left:0px; top:50px; width:365px; height:600px;  z-index:1;' >
 		<div id='mainw' style='position:absolute; left:0px; top:0px; width:600px; height:600px; ' >
-			<div id='map' style='position:absolute; left:0px; top:0px; width:600px; height:600px; display:block; border:1px solid red;' >
+			<div id='map' style='position:absolute; left:0px; top:0px; width:600px; height:600px; display:block; ' >
 
 				<div id='users' style='position:absolute; left:0px; top:0px;  z-index:101; '>
 					<div id='homepos' style='position:absolute; left:0px; top:0px;  background-color:green; width:7px; height:7px; z-index:102;'></div>
@@ -483,7 +483,7 @@ function onWatchSuccess(position)
 
 	<div id='arrived_screen'  style='display:none; position:fixed; top:50px; left:0px;  width:400px; height:620px; z-index:300; background-color:black; color:white; '>
 	
-		<br><br><br><br><br><br><br><br><br><br><br><center>თქვენი ტაქსი ადგილზეა<br><Br><a href='javascript: chamovdivar();' style='color:white; background-color:green; padding:10px; text-align:center; border:1px solid gray;'>ჩამოვდივარ</a></center>
+		<br><br><br><br><br><br><br><br><br><br><br><center>თქვენი ტაქსი ადგილზეა<br><Br><a href='javascript: chamovdivar();' style='color:white; background-color:green; padding:10px; text-align:center; '>ჩამოვდივარ</a></center>
 		<br><br><center>
 		<div id='taxi_number' style='color:white;'></div>
 	</div>
@@ -495,7 +495,7 @@ function onWatchSuccess(position)
 
 
 		<!-- MOUSE OVER LAYER -->
-		<div id='mouser' style='position:absolute; left:0px;top:50px; width:400px; height:620px; z-index:250; border:1px solid red;' ontouchstart="mdown(event);" ontouchend="mup();"  ontouchmove="getmousecoord(event);">
+		<div id='mouser' style='position:absolute; left:0px;top:50px; width:400px; height:620px; z-index:250; ' ontouchstart="mdown(event);" ontouchend="mup();"  ontouchmove="getmousecoord(event);">
 		</div>
 
 
@@ -530,7 +530,7 @@ function onWatchSuccess(position)
 
 
 
-		<div id="bottom_menu" style='border:1px solid green; width:100%; position:fixed; bottom:0px; left:0px; height:41px; z-index:251; background-color:#3f3f3f; filter: alpha(opacity=90);	-moz-opacity: 0.9; -khtml-opacity: 0.9;  opacity: 0.9;'>
+		<div id="bottom_menu" style=' width:100%; position:fixed; bottom:0px; left:0px; height:41px; z-index:251; background-color:#3f3f3f; filter: alpha(opacity=90);	-moz-opacity: 0.9; -khtml-opacity: 0.9;  opacity: 0.9;'>
 			<img src='phone.png'>
 			<div id='info_text' name='info_text' style=' float:right; color:white; padding:5px; '></div>
 		</div>
@@ -966,7 +966,7 @@ function setmypos()
 		loadtiles();	
 		DrawHomePos();
 		}
-	document.getElementById("infodiv").innerHTML=wlon+ " / "+wlat;
+//	document.getElementById("infodiv").innerHTML=wlon+ " / "+wlat;
 	}
 
 function check_user_click()
