--- a/index.html
+++ b/index.html
@@ -520,6 +520,12 @@ function onWatchSuccess(position)
 
 		<!--<a href='Javascript: Start();' id='mainb' style='position:absolute; left:25px; top:25px; background-color:green; color:white; font-weight:bold; width:200px; display:block; padding:5px; z-index:301; text-align:center;' >START</a>-->
 
+	<div id='chat_div' style='position:fixed; right:10px; bottom:90px;'>
+		<a href='Javascript: chat_click();'><img src='chat.png'></a>
+	</div>
+	<a id='call_but'  style='position:fixed; bottom:0px; left:80px; height:100px; width:210px; z-index:252; ' href='Javascript: call_taxi();'><img src='but_call.png'></a>
+
+
 
 	<a id='call_but'  style='position:fixed; bottom:0px; left:80px; height:100px; width:210px; z-index:252; ' href='Javascript: call_taxi();'><img src='but_call.png'></a>
 	
