--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@ function onWatchSuccess(position)
 
 		<!--<a href='Javascript: Start();' id='mainb' style='position:absolute; left:25px; top:25px; background-color:green; color:white; font-weight:bold; width:200px; display:block; padding:5px; z-index:301; text-align:center;' >START</a>-->
 
-	<div id='chat_div' style='position:fixed; right:10px; bottom:90px;'>
+	<div id='chat_div' style='position:fixed; right:10px; bottom:90px; z-index:253; border:1px solid red;'>
 		<a href='Javascript: chat_click();'><img src='chat.png'></a>
 	</div>
 	<a id='call_but'  style='position:fixed; bottom:0px; left:80px; height:100px; width:210px; z-index:252; ' href='Javascript: call_taxi();'><img src='but_call.png'></a>
