--- a/index.html
+++ b/index.html
@@ -525,7 +525,11 @@ function onWatchSuccess(position)
 		<!--<a href='Javascript: Start();' id='mainb' style='position:absolute; left:25px; top:25px; background-color:green; color:white; font-weight:bold; width:200px; display:block; padding:5px; z-index:301; text-align:center;' >START</a>-->
 
 	<div id='chat_div' style='position:fixed; right:10px; bottom:90px; z-index:253; border:1px solid red;'>
-		<a href='Javascript: chat_click();'><img src='chat.png'></a>
+		<a href='Javascript: chat_click();' style='position:absolute; top:-25px; right:0px;'><img src='chat.png'></a>
+		<div id='chat_window' style='display:inline; width:90%; height:200px; background-color:white;'>
+			<div id='chat_txt' style='width:98%; border:1px solid gray; height:150px; overflow:auto;'></div>
+			<input type='text' size=30 id='chat_send_text'><input type='button' value='send'>
+		</div>
 	</div>
 	<a id='call_but'  style='position:fixed; bottom:0px; left:80px; height:100px; width:210px; z-index:252; ' href='Javascript: call_taxi();'><img src='but_call.png'></a>
 
@@ -533,9 +537,9 @@ function onWatchSuccess(position)
 
 	<a id='call_but'  style='position:fixed; bottom:0px; left:80px; height:100px; width:210px; z-index:252; ' href='Javascript: call_taxi();'><img src='but_call.png'></a>
 	
-<a href='Javascript:zoomme(1);' style='position:fixed; bottom:85px; right:5px; margin:5px; z-index:252;'><img src='zoomin.png'></a>
-<a href='Javascript:zoomme(-1);'style='position:fixed; bottom:45px; right:5px; margin:5px; z-index:252;'><img src='zoomout.png'></a>
-<a href='Javascript: setme();' style='position:fixed; bottom:130px; right:5px; margin:5px; z-index:252; ' ><img id='cbut' src='centeroff.png'></a>
+<a href='Javascript:zoomme(1);' style='position:fixed; bottom:85px; left:5px; margin:5px; z-index:252;'><img src='zoomin.png'></a>
+<a href='Javascript:zoomme(-1);'style='position:fixed; bottom:45px; left:5px; margin:5px; z-index:252;'><img src='zoomout.png'></a>
+<a href='Javascript: setme();' style='position:fixed; top:60px; right:leftpx; margin:5px; z-index:252; ' ><img id='cbut' src='centeroff.png'></a>
 <!--<a href='Javascript: show_settings();' style='position:fixed; top:55px; right:5px; margin:5px; z-index:252;' ><img src='settings.png'></a>-->
 
 
