--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ function update_data()
 				console.log("register received");
 				Start();
 				}
-			else if (mr.substring(0,4)="chat")
+			else if (mr.substring(0,4)=="chat")
 				{
 				console.log("chat receive: "+mr);
 				a=mr.split("|");
@@ -544,8 +544,8 @@ function onWatchSuccess(position)
 	<div id='chat_div' style='position:fixed; right:10px; bottom:45px; z-index:253; border:1px solid red; '>
 		<a href='Javascript: chat_click();' style='position:absolute; top:-25px; right:0px;'><img src='chat.png'></a>
 		<div id='chat_window' style='display:inline; width:98%; height:200px; background-color:white; display:none;'>
-			<div id='chat_txt' style='width:99%; border:1px solid gray; height:150px; overflow:auto; background-color:white;'></div>
-			<input type='text' size=30 id='chat_send_text'><input type='button' value='send' onclick='chat_send();'>
+			<div id='chat_txt' style='width:99%; border:1px solid gray; height:150px; overflow:auto; background-color:white; '></div>
+			<input type='text' size=30 id='chat_send_text' style='z-index:255;'><input type='button' value='send' onclick='chat_send();' style='z-index:255;'>
 		</div>
 	</div>
 
