--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@ function update_data()
 						document.getElementById("arrived_screen").style.display="none";
 						change_status(0);
 						}
+					check_chat(parseInt(mr));
 					}
 				
 				if (inpause==0)	{DrawUsers();}
