--- a/index.html
+++ b/index.html
@@ -490,11 +490,11 @@ function onWatchSuccess(position)
 
 				<div id='users' style='position:absolute; left:0px; top:0px;  z-index:101; '>
 					<div id='homepos' style='position:absolute; left:0px; top:0px;  background-color:green; width:7px; height:7px; z-index:102;'></div>
-					<div id='taxibox'  style=' position:absolute; left:0px; top:0px; color:red; font-size:12px; width:32px; height:32px;  z-index:103;'>
-						<div style='position:absolute; left:-16px; top:-16px; width:32px; height:32px; z-index:104;'>
-							<img src='car.svg' style='width:40px; height:40px;'>
+					<div id='taxibox'  style=' position:absolute; left:0px; top:0px; color:red; font-size:12px; width:50px; height:50px;  z-index:103;'>
+						<div style='position:absolute; left:-25px; top:-25px; width:50px; height:50px; z-index:104;'>
+							<img src='car.svg' style='width:50px; height:50px;'>
 						</div>
-						<div id='taxitext' style='position:absolute; left:-40px; top:16px;'></div>
+						<div id='taxitext' style='position:absolute; left:-40px; top:25px; background-color:white;'></div>
 					</div>
 				</div>
 
@@ -544,7 +544,7 @@ function onWatchSuccess(position)
 		
 
 	<div id='chat_div' style='position:fixed; right:10px; bottom:45px; z-index:304; border:1px solid red; '>
-		<a href='Javascript: chat_click();' style='position:absolute; top:-25px; right:0px;'><img src='chat.svg' style='width:40px; height:40px;'></a>
+		<a href='Javascript: chat_click();' style='position:absolute; top:-25px; right:0px;'><img src='chat.svg' style='width:50px; height:50px;'></a>
 		<div id='chat_window' style='display:inline; width:98%; height:200px; background-color:white; display:none;'>
 			<div id='chat_txt' style='width:99%; border:1px solid gray; height:150px; overflow:auto; background-color:white; color:black;'>kkk</div>
 			<input type='text' size=30 id='chat_send_text' style='z-index:305;'><input type='button' value='send' onclick='chat_send();' style='z-index:305;'>
@@ -559,7 +559,7 @@ function onWatchSuccess(position)
 	
 <a href='Javascript:zoomme(1);' style='position:fixed; bottom:85px; left:5px; margin:5px; z-index:252;'><img src='zoomin.png'></a>
 <a href='Javascript:zoomme(-1);'style='position:fixed; bottom:45px; left:5px; margin:5px; z-index:252;'><img src='zoomout.png'></a>
-<a href='Javascript: setme();' style='position:fixed; top:60px; right:leftpx; margin:5px; z-index:252; ' ><img id='cbut' src='cente.svg' style='width:40px; height:40px;'></a>
+<a href='Javascript: setme();' style='position:fixed; top:60px; right:leftpx; margin:5px; z-index:252; ' ><img id='cbut' src='center.svg' style='width:50px; height:50px;'></a>
 <!--<a href='Javascript: show_settings();' style='position:fixed; top:55px; right:5px; margin:5px; z-index:252;' ><img src='settings.png'></a>-->
 
 
