--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@ function onWatchSuccess(position)
 						<div style='position:absolute; left:-25px; top:-25px; width:50px; height:50px; z-index:104;'>
 							<img src='car.svg' style='width:50px; height:50px;'>
 						</div>
-						<div id='taxitext' style='position:absolute; left:-40px; top:25px; background-color:white;'></div>
+						<div id='taxitext' style='position:absolute; left:-40px; top:25px;  width:70px; text-align:center;'></div>
 					</div>
 				</div>
 
@@ -543,7 +543,7 @@ function onWatchSuccess(position)
 
 		
 
-	<div id='chat_div' style='position:fixed; right:10px; bottom:45px; z-index:304; border:1px solid red; '>
+	<div id='chat_div' style='position:fixed; right:10px; bottom:60px; z-index:304; border:1px solid red; '>
 		<a href='Javascript: chat_click();' style='position:absolute; top:-25px; right:0px;'><img src='chat.svg' style='width:50px; height:50px;'></a>
 		<div id='chat_window' style='display:inline; width:98%; height:200px; background-color:white; display:none;'>
 			<div id='chat_txt' style='width:99%; border:1px solid gray; height:150px; overflow:auto; background-color:white; color:black;'>kkk</div>
@@ -632,7 +632,7 @@ function chat_click()
 	else	
 		{
 		document.getElementById("chat_window").style.display="none";
-		document.getElementById("chat_div").style.bottom="45px";
+		document.getElementById("chat_div").style.bottom="60px";
 		chatopened=0;
 		}
 
