--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@ function onWatchSuccess(position)
 		</div>
 	</div>
 
-	<a id='call_but'  style='position:fixed; bottom:0px; left:80px; height:100px; width:210px; z-index:252; ' href='Javascript: call_taxi();'><img src='but_call.png'></a>
+	<a id='call_but'  style='position:fixed; bottom:0px; left:80px; height:100px; width:210px; z-index:252; ' href='Javascript: call_taxi();'><img src='gamozaxeba.svg' style='width:210px; height:100px;'></a>
 
 
 
