--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@ function onDeviceReady()
 	document.addEventListener("volumeupbutton", onVolumeUp, false);
 
 	console.log("device ready, getting position");
-	navigator.geolocation.getCurrentPosition(onSuccess, onError, {enableHighAccuracy: false,  maximumAge:0});
-	var opts = { timeout: 5000, enableHighAccuracy: false, maximumAge:0};
+	navigator.geolocation.getCurrentPosition(onSuccess, onError, {enableHighAccuracy: true,  maximumAge:0});
+	var opts = { timeout: 5000, enableHighAccuracy: true, maximumAge:0};
 	watchID = navigator.geolocation.watchPosition(onWatchSuccess, onError, opts);
 	document.addEventListener("resume", onResume, false);
 	
