--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@ function onWatchSuccess(position)
 			<div id='map' style='position:absolute; left:0px; top:0px; width:600px; height:600px; display:block; ' >
 
 				<div id='users' style='position:absolute; left:0px; top:0px;  z-index:101; '>
-					<div id='homepos' style='position:absolute; left:0px; top:0px;  background-color:green; width:7px; height:7px; z-index:102;'></div>
+					<div id='homepos' style='position:absolute; left:0px; top:0px;  background-color:green; width:7px; height:7px; z-index:102;'><img src='pin.svg' style='position:absolute; left:-15px; top:-17px; width:30px; height:35px;'></div>
 					<div id='taxibox'  style=' position:absolute; left:0px; top:0px; color:red; font-size:12px; width:50px; height:50px;  z-index:103;'>
 						<div style='position:absolute; left:-25px; top:-25px; width:50px; height:50px; z-index:104;'>
 							<img src='car.svg' style='width:50px; height:50px;'>
