--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@ function onWatchSuccess(position)
 		</div>
 	</div>
 
-	<a id='call_but'  style='position:fixed; bottom:0px; left:80px; height:100px; width:210px; z-index:252; ' href='Javascript: call_taxi();'><img src='gamozaxeba.svg' style='width:210px; height:100px;'></a>
+	<a id='call_but'  style='position:fixed; bottom:0px; left:80px; height:100px; width:210px; z-index:252; ' href='Javascript: call_taxi();'><img src='gamodzaxeba.svg' style='width:210px; height:100px;'></a>
 
 
 	
@@ -1020,7 +1020,7 @@ function setmypos()
 
 	document.getElementById("map").style.left=difx+"px";
 	document.getElementById("map").style.top=dify+"px";
-	document.getElementById('geopos_short').innerHTML="X: "+difx+" Y: "+dify;
+
 	if (xtile!=oxt || oyt!=ytile)
 		{
 		oxt=xtile;
