--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@ function onWatchSuccess(position)
 
 		
 
-	<div id='chat_div' style='position:fixed; right:10px; bottom:60px; z-index:304; border:1px solid red; '>
+	<div id='chat_div' style='position:fixed; right:10px; bottom:50px; z-index:304; '>
 		<a href='Javascript: chat_click();' style='position:absolute; top:-25px; right:0px;'><img src='chat.svg' style='width:50px; height:50px;'></a>
 		<div id='chat_window' style='display:inline; width:98%; height:200px; background-color:white; display:none;'>
 			<div id='chat_txt' style='width:99%; border:1px solid gray; height:150px; overflow:auto; background-color:white; color:black;'>kkk</div>
