--- a/index.html
+++ b/index.html
@@ -846,13 +846,13 @@ var tdist_old=0;
 function mdown(event)
 	{
 
-	omousex=event.touches[0].pageX; 
-	omousey=event.touches[0].pageY;
+	omousex=parseInt(event.touches[0].pageX); 
+	omousey=parseInt(event.touches[0].pageY);
 	console.log(event.touches.length+"mouse down: "+omousex+ " - "+omousey);
 	if (event.touches.length>1)
 		{
-		t2x=event.touches[1].pageX;
-		t2y=event.touches[1].pageY;
+		t2x=parseInt(event.touches[1].pageX);
+		t2y=parseInt(event.touches[1].pageY);
 		tdist_old=Math.sqrt( (t2x-omousex)^2 + (t2y-omousey)^2 );
 		tdist=Math.sqrt( (t2x-omousex)^2 + (t2y-omousey)^2 );
 		console.log(" dva: "+t2x+ " - "+t2y);
@@ -892,10 +892,10 @@ function getmousecoord(event)
 	console.log("get mouse coord");
 	if (event.touches.length>1)
 		{
-		t2x=event.touches[1].pageX;
-		t2y=event.touches[1].pageY;
-		mousex=event.touches[0].pageX; 
-		mousey=event.touches[0].pageY;
+		t2x=parseInt(event.touches[1].pageX);
+		t2y=parseInt(event.touches[1].pageY);
+		mousex=parseInt(event.touches[0].pageX); 
+		mousey=parseInt(event.touches[0].pageY);
 		console.log("get mouse coord: "+mousex+" - "+mousey);
 		console.log("get mouse dva: "+t2x+" - "+t2y);
 		tdist=Math.sqrt( (t2x-omousex)^2 + (t2y-omousey)^2 );
