--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@ function onWatchSuccess(position)
 
 
 		<!-- MOUSE OVER LAYER -->
-		<div id='mouser' style='position:absolute; left:0px;top:50px; width:400px; height:620px; z-index:250; ' ontouchstart="mdown(event);" ontouchend="mup();"  ontouchmove="getmousecoord(event);">
+		<div id='mouser' style='position:absolute; left:0px;top:50px; width:400px; height:620px; z-index:250; ' ontouchstart="mdown(event);" ontouchend="mup(event);"  ontouchmove="getmousecoord(event);">
 		</div>
 
 
@@ -855,6 +855,8 @@ function mdown(event)
 		t2y=parseInt(event.touches[1].pageY);
 		tdist_old=Math.sqrt( Math.pow ((t2x-omousex),2) + Math.pow ((t2y-omousey),2) );
 		tdist=Math.sqrt( Math.pow ((t2x-omousex),2) + Math.pow ((t2y-omousey),2) );
+		tdist_old=parseInt(tdist_old);
+		tdist=parseInt(tdist);
 		console.log(" dva: "+t2x+ " - "+t2y);
 		console.log(" tdist: "+tdist_old +" - " +tdist );
 		}
@@ -887,6 +889,7 @@ biji[18]=190000;
 
 var sfinx=0;
 var finy=0;
+
 function getmousecoord(event)
 	{
 	console.log("get mouse coord");
@@ -899,6 +902,8 @@ function getmousecoord(event)
 		console.log("get mouse coord: "+mousex+" - "+mousey);
 		console.log("get mouse dva: "+t2x+" - "+t2y);
 		tdist=Math.sqrt( Math.pow ((t2x-omousex),2) + Math.pow ((t2y-omousey),2) );
+
+		tdist=parseInt(tdist);
 		console.log(" tdist: "+tdist_old +" - " +tdist );
 		
 		}
@@ -926,9 +931,21 @@ function getmousecoord(event)
 		}
 	}
 
-function mup()
+function mup(event)
 	{
 	console.log("mouse up");
+
+	if (event.touches.length>1)
+		{
+		t2x=parseInt(event.touches[1].pageX);
+		t2y=parseInt(event.touches[1].pageY);
+		tdist_old=Math.sqrt( Math.pow ((t2x-omousex),2) + Math.pow ((t2y-omousey),2) );
+		tdist=Math.sqrt( Math.pow ((t2x-omousex),2) + Math.pow ((t2y-omousey),2) );
+		tdist_old=parseInt(tdist_old);
+		tdist=parseInt(tdist);
+		console.log(" dva: "+t2x+ " - "+t2y);
+		console.log(" tdist: "+tdist_old +" - " +tdist );
+		}
 	but1=0;
 	sfinx=0; sfiny=0;
 	check_user_click();
@@ -1249,5 +1266,7 @@ function downtile(smap, szoom, A, B, i, ii, retry)
 	{
     console.log(error.code);
     }
+
+document.ontouchmove = function(e) {getmousecoord(e);};
 </script></body>
 </html>
