--- a/index.html
+++ b/index.html
@@ -517,8 +517,8 @@ function onWatchSuccess(position)
 
 
 		<!-- MOUSE OVER LAYER -->
-		<div id='mouser' style='position:absolute; left:0px;top:50px; width:400px; height:620px; z-index:250; ' ontouchstart="mdown(event);" ontouchend="mup(event);"  ontouchmove="getmousecoord(event);">
-		</div>
+<div id='mouser' style='position:fixed; left:0px;top:50px; width:400px; height:620px; z-index:250; border: 1px solid red;  ' ontouchstart="mdown(event);" ontouchend="mup(event);"  ontouchmove="getmousecoord(event);" onmousemove="getmousecoord(event);">
+</div>
 
 
 		<!--<div id='profile_div' style='position:absolute; left:0px; top:0px; width:600px; height:600px; z-index:252; background:URL(semitrans.png); visibility:hidden;'>
@@ -542,7 +542,7 @@ function onWatchSuccess(position)
 
 		
 
-	<div id='chat_div' style='position:fixed; right:10px; bottom:50px; z-index:304; '>
+	<div id='chat_div' style='position:fixed; right:10px; bottom:50px; z-index:304; border:1px solid red; '>
 		<a href='Javascript: chat_click();' style='position:absolute; top:-25px; right:0px;'><img src='chat.svg' style='width:50px; height:50px;'></a>
 		<div id='chat_window' style='display:inline; width:98%; height:200px; background-color:white; display:none;'>
 			<div id='chat_txt' style='width:99%; border:1px solid gray; height:150px; overflow:auto; background-color:white; color:black;'>kkk</div>
@@ -550,18 +550,18 @@ function onWatchSuccess(position)
 		</div>
 	</div>
 
-	<a id='call_but'  style='position:fixed; bottom:0px; left:80px; height:100px; width:210px; z-index:252; ' href='Javascript: call_taxi();'><img src='gamodzaxeba.svg' style='width:210px; height:100px;'></a>
+	<a id='call_but'  style='position:fixed; bottom:0px; left:80px; height:100px; width:210px; z-index:252; border:1px solid red; ' href='Javascript: call_taxi();'><img src='gamodzaxeba.svg' style='width:210px; height:100px;'></a>
 
 
 	
-<a href='Javascript:zoomme(1);' style='position:fixed; bottom:85px; left:5px; margin:5px; z-index:252;'><img src='zoomin.png'></a>
-<a href='Javascript:zoomme(-1);'style='position:fixed; bottom:45px; left:5px; margin:5px; z-index:252;'><img src='zoomout.png'></a>
+<!--<a href='Javascript:zoomme(1);' style='position:fixed; bottom:85px; left:5px; margin:5px; z-index:252;'><img src='zoomin.png'></a>
+<a href='Javascript:zoomme(-1);'style='position:fixed; bottom:45px; left:5px; margin:5px; z-index:252;'><img src='zoomout.png'></a>-->
 <a href='Javascript: setme();' style='position:fixed; top:60px; right:leftpx; margin:5px; z-index:252; ' ><img id='cbut' src='center.svg' style='width:50px; height:50px;'></a>
 <!--<a href='Javascript: show_settings();' style='position:fixed; top:55px; right:5px; margin:5px; z-index:252;' ><img src='settings.png'></a>-->
 
 
 
-		<div id="bottom_menu" style=' width:100%; position:fixed; bottom:0px; left:0px; height:41px; z-index:251; background-color:#3f3f3f; filter: alpha(opacity=90);	-moz-opacity: 0.9; -khtml-opacity: 0.9;  opacity: 0.9;'>
+		<div id="bottom_menu" style=' width:100%; position:fixed; bottom:0px; left:0px; height:41px; z-index:251; background-color:#3f3f3f; filter: alpha(opacity=90);	-moz-opacity: 0.9; -khtml-opacity: 0.9;  opacity: 0.9;   border:1px solid red;' >
 			<img src='phone.png'>
 			<div id='info_text' name='info_text' style=' float:right; color:white; padding:5px; '></div>
 		</div>
@@ -899,12 +899,12 @@ function getmousecoord(event)
 		t2y=parseInt(event.touches[1].pageY);
 		mousex=parseInt(event.touches[0].pageX); 
 		mousey=parseInt(event.touches[0].pageY);
-		console.log("get mouse coord: "+mousex+" - "+mousey);
-		console.log("get mouse dva: "+t2x+" - "+t2y);
+		console.log("get mouse coord on move: "+mousex+" - "+mousey);
+		console.log("get mouse dva on move: "+t2x+" - "+t2y);
 		tdist=Math.sqrt( Math.pow ((t2x-omousex),2) + Math.pow ((t2y-omousey),2) );
 
 		tdist=parseInt(tdist);
-		console.log(" tdist: "+tdist_old +" - " +tdist );
+		console.log(" tdist on move: "+tdist_old +" - " +tdist );
 		
 		}
 	else
@@ -943,8 +943,8 @@ function mup(event)
 		tdist=Math.sqrt( Math.pow ((t2x-omousex),2) + Math.pow ((t2y-omousey),2) );
 		tdist_old=parseInt(tdist_old);
 		tdist=parseInt(tdist);
-		console.log(" dva: "+t2x+ " - "+t2y);
-		console.log(" tdist: "+tdist_old +" - " +tdist );
+		console.log(" dva on up: "+t2x+ " - "+t2y);
+		console.log(" tdist on up: "+tdist_old +" - " +tdist );
 		}
 	but1=0;
 	sfinx=0; sfiny=0;
