--- a/index.html
+++ b/index.html
@@ -1222,7 +1222,7 @@ function loadtiles()
 		
 	if (LT_finished==0)
 		{
-		setTimeout("loadtiles();",10);
+		//setTimeout("loadtiles();",10);
 		}
 
 	}
