--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@ function onWatchSuccess(position)
 
 
 		<!-- MOUSE OVER LAYER -->
-<div id='mouser' style='position:fixed; left:0px;top:50px; width:400px; height:620px; z-index:250; border: 1px solid red;  ' ontouchstart="mdown(event);" ontouchend="mup(event);"  ontouchmove="getmousecoord(event);" >
+<div id='mouser' style='position:fixed; left:0px;top:50px; border:1px solid red; width:365px; height:500px; z-index:500; -ms-touch-action: none;  ' ontouchstart="mdown(event);" ontouchend="mup(event);"  ontouchmove="getmousecoord(event);" >
 </div>
 
 
