--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@ function onWatchSuccess(position)
 
 
 		<!-- MOUSE OVER LAYER -->
-<div id='mouser' style='position:fixed; left:0px;top:50px; border:1px solid red; width:355px; height:450px; z-index:500; -ms-touch-action: none;  ' ontouchstart="mdown(event);" ontouchend="mup(event);"  ontouchmove="getmousecoord(event);" >
+<div id='mouser' style='position:fixed; left:0px;top:50px; border:1px solid green; width:350px; height:350px; z-index:500;  ' ontouchstart="mdown(event);" ontouchend="mup(event);"  ontouchmove="getmousecoord(event);" >
 </div>
 
 
@@ -896,42 +896,6 @@ function getmousecoord(event)
 	{
 	console.log("get mouse coord movedi");
 	
-	if (event.targetTouches.length>1)
-		{
-		t2x=parseInt(event.targetTouches[1].pageX);
-		t2y=parseInt(event.targetTouches[1].pageY);
-		mousex=parseInt(event.targetTouches[0].pageX); 
-		mousey=parseInt(event.targetTouches[0].pageY);
-		console.log("get mouse coord on move: "+mousex+" - "+mousey);
-		console.log("get mouse dva on move: "+t2x+" - "+t2y);
-		tdist=Math.sqrt( Math.pow ((t2x-omousex),2) + Math.pow ((t2y-omousey),2) );
-
-		tdist=parseInt(tdist);
-		console.log(" tdist on move: "+tdist_old +" - " +tdist );
-		
-		}
-	else
-		{
-		if (but1==1)
-			{
-			
-			
-			mousex=event.touches[0].pageX; 
-			mousey=event.touches[0].pageY;
-		
-			console.log("get mouse coord: "+mousex+" - "+mousey);
-
-			wlon=wlon+((omousex-mousex)/biji[MyZoom]);
-			wlat=wlat-((omousey-mousey)/(biji[MyZoom]*1.3));
-			omousex=mousex;
-			omousey=mousey;
-
-			//
-			setmypos();
-			DrawUsers();
-				
-			}
-		}
 	}
 
 function mup(event)
