--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ var uplimit=5;
 function MainProg()
 	{
 	console.log("main prog: "+started);
-	console.log("focus is on: "+document.activeElement);
+	console.log("focus is on: "+document.activeElement.getAttribute('id'));
 	if (started==1)
 		{	
 		console.log("I am running");
