--- a/index.html
+++ b/index.html
@@ -976,8 +976,8 @@ document.ontouchmove = function (e) {  console.log("object: "+e.target.id);};
 document.getElementById("fanjara").style.width=sx+"px";
 document.getElementById("fanjara").style.height=sy+"px";
 
-document.getElementById("mouser").style.width=sx+"px";
-document.getElementById("mouser").style.height=sy+"px";
+//document.getElementById("mouser").style.width=sx+"px";
+//document.getElementById("mouser").style.height=sy+"px";
 
 
 var mywpx=(myw-1)*256;
@@ -1126,7 +1126,7 @@ return;
 function hide_profile()
 	{
 	document.getElementById("profile_div").style.visibility="hidden";
-	document.getElementById("mouser").style.visibility="visible";
+//	document.getElementById("mouser").style.visibility="visible";
 	curtaxi=-1;
 	}
 var curtaxi=-1;
@@ -1135,7 +1135,7 @@ function show_profile(tid)
 	{
 	var curtaxi=tid;
 	document.getElementById("profile_div").style.visibility="visible";
-	document.getElementById("mouser").style.visibility="hidden";
+//	document.getElementById("mouser").style.visibility="hidden";
 	}
 
 function call_taxi()
