--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@ function onWatchSuccess(position)
 	body {color:white; margin:0px; padding:0px;}
 	a {text-decoration:none; color:white;}
   </style>
-  <body bgcolor=black>
+  <body bgcolor=#fac402>
   				
 		<!--<div style='width:256px; height:256px; position:relative; position:absolute; left:0px; top:0px; z-index:99;' >
 			<img   id='myimg' style='width:256px; height:256px;'>
@@ -511,7 +511,7 @@ function onWatchSuccess(position)
 
 
 
-	<div id='arrived_screen'  style='display:none; position:fixed; top:50px; left:0px;  width:400px; height:620px; z-index:300; background-color:black; color:white; '>
+	<div id='arrived_screen'  style='display:none; position:fixed; top:50px; left:0px;  width:400px; height:620px; z-index:300; background-color:#fac402; color:white; '>
 	
 		<br><br><br><br><br><br><br><br><br><br><br><center>თქვენი ტაქსი ადგილზეა<br><Br><a href='javascript: chamovdivar();' style='color:white; background-color:green; padding:10px; text-align:center; '>ჩამოვდივარ</a></center>
 		<br><br><center>
@@ -519,9 +519,9 @@ function onWatchSuccess(position)
 	</div>
 	
 
-	<div id='GPS_search_screen'  style='display:inline; position:fixed; top:0px; left:0px;  width:365px; height:650px; z-index:301; background-color:black; color:white; '><br><br><br><br><br><br><br><br><center> <img src='taxi_icon.png'><br><br>... მიმდინარეობს თქვენი ლოკაციის დადგენა ...</center></div>
+	<div id='GPS_search_screen'  style='display:inline; position:fixed; top:0px; left:0px;  width:365px; height:650px; z-index:301; background-color:#fac402; color:white; '><br><br><br><br><br><br><br><br><center> <img src='taxi_icon.png'><br><br>... მიმდინარეობს თქვენი ლოკაციის დადგენა ...</center></div>
 
-	<div id='taxi_search_screen'  style='display:none; position:fixed; top:0px; left:0px;  width:365px; height:650px; z-index:302; background-color:black; color:white; '><br><br><br><br><br><br><br><br><center> <img src='taxi_icon.png'><br><br>... უახლოესი თავისუფალი ტაქსის ძიება ...</center></div>
+	<div id='taxi_search_screen'  style='display:none; position:fixed; top:0px; left:0px;  width:365px; height:650px; z-index:302; background-color:#fac402; color:white; '><br><br><br><br><br><br><br><br><center> <img src='taxi_icon.png'><br><br>... უახლოესი თავისუფალი ტაქსის ძიება ...</center></div>
 
 
 		
@@ -550,7 +550,7 @@ function onWatchSuccess(position)
 	<div id='chat_div' style='position:fixed; right:10px; bottom:50px; z-index:304; border:1px solid red; '>
 		<a href='Javascript: chat_click();' style='position:absolute; top:-25px; right:0px;'><img src='chat.svg' style='width:50px; height:50px;'></a>
 		<div id='chat_window' style='display:inline; width:98%; height:200px; background-color:white; display:none;'>
-			<div id='chat_txt' style='width:99%; border:1px solid gray; height:150px; overflow:auto; background-color:white; color:black;'>kkk</div>
+			<div id='chat_txt' style='width:99%; border:1px solid gray; height:150px; overflow:auto; background-color:white; color:#fac402;'>kkk</div>
 			<input type='text' size=30 id='chat_send_text' style='z-index:305;'><input type='button' value='send' onclick='chat_send();' style='z-index:305;'>
 		</div>
 	</div>
@@ -588,7 +588,7 @@ function onWatchSuccess(position)
 		<div id='mydiv'></div>
 		<br>
 		<p id="geopos">Finding geolocation...</p>
-
+<!--
 	<b>რუქის ტიპი</b><br>
 	<select id='maptype' onChange='changemap();'>
 	<option value='1' >Open Street Map (fast)</option>
@@ -602,10 +602,10 @@ function onWatchSuccess(position)
 	<option value='9'>Watercolor Map (very slow)</option>
 	<option value='10'>Toner MAP (slow)</option>
 	</select>
-	<br><br>
+	<br><br>-->
 		<div id='erorebi'>Tilebi (zoom:16)</div>
 	
-		
+		<center>
 		<b>პროფილი</b>
 		<table>
 			<tr><td>მომხმ.:</td><td> <input id='myname' name='myname' value='youuser' size=12></td></tr>
@@ -614,9 +614,10 @@ function onWatchSuccess(position)
 		</table>
 		<a href='javascript: regme();'>რეგისტრაცია</a>
 		<br><br>
-		<input type='checkbox' id='ignor_cache' name='ignor_cache' onchange='cignore();'> რუქის ქეშის იგნორირება<br>
-		<input type='checkbox' id='ignor_cache_on_wifi' name='ignor_cache_on_wifi' onchange='cignorewifi();' checked> რუქის ქეშის იგნორირება WiFi-სას<br>
-		<a href='Javascript: show_map();'>Back</a>
+		
+<!--		<input type='checkbox' id='ignor_cache' name='ignor_cache' onchange='cignore();'> რუქის ქეშის იგნორირება<br>
+		<input type='checkbox' id='ignor_cache_on_wifi' name='ignor_cache_on_wifi' onchange='cignorewifi();' checked> რუქის ქეშის იგნორირება WiFi-სას<br>-->
+		<a href='Javascript: show_map();'>უკან დაბრუნება</a></center>
 	</div>
 </div>
 
