--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@ function onWatchSuccess(position)
 	body {color:white; margin:0px; padding:0px;}
 	a {text-decoration:none; color:white;}
   </style>
-  <body bgcolor=#fac402>
+  <body bgcolor=#e3b202>
   				
 		<!--<div style='width:256px; height:256px; position:relative; position:absolute; left:0px; top:0px; z-index:99;' >
 			<img   id='myimg' style='width:256px; height:256px;'>
@@ -511,7 +511,7 @@ function onWatchSuccess(position)
 
 
 
-	<div id='arrived_screen'  style='display:none; position:fixed; top:50px; left:0px;  width:400px; height:620px; z-index:300; background-color:#fac402; color:white; '>
+	<div id='arrived_screen'  style='display:none; position:fixed; top:50px; left:0px;  width:400px; height:620px; z-index:300; background-color:#e3b202; color:white; '>
 	
 		<br><br><br><br><br><br><br><br><br><br><br><center>თქვენი ტაქსი ადგილზეა<br><Br><a href='javascript: chamovdivar();' style='color:white; background-color:green; padding:10px; text-align:center; '>ჩამოვდივარ</a></center>
 		<br><br><center>
@@ -519,9 +519,9 @@ function onWatchSuccess(position)
 	</div>
 	
 
-	<div id='GPS_search_screen'  style='display:inline; position:fixed; top:0px; left:0px;  width:365px; height:650px; z-index:301; background-color:#fac402; color:white; '><br><br><br><br><br><br><br><br><center> <img src='taxi_icon.png'><br><br>... მიმდინარეობს თქვენი ლოკაციის დადგენა ...</center></div>
+	<div id='GPS_search_screen'  style='display:inline; position:fixed; top:0px; left:0px;  width:365px; height:650px; z-index:301; background-color:#e3b202; color:white; '><br><br><br><br><br><br><br><br><center> <img src='taxi_icon.png'><br><br>... მიმდინარეობს თქვენი ლოკაციის დადგენა ...</center></div>
 
-	<div id='taxi_search_screen'  style='display:none; position:fixed; top:0px; left:0px;  width:365px; height:650px; z-index:302; background-color:#fac402; color:white; '><br><br><br><br><br><br><br><br><center> <img src='taxi_icon.png'><br><br>... უახლოესი თავისუფალი ტაქსის ძიება ...</center></div>
+	<div id='taxi_search_screen'  style='display:none; position:fixed; top:0px; left:0px;  width:365px; height:650px; z-index:302; background-color:#e3b202; color:white; '><br><br><br><br><br><br><br><br><center> <img src='taxi_icon.png'><br><br>... უახლოესი თავისუფალი ტაქსის ძიება ...</center></div>
 
 
 		
@@ -550,7 +550,7 @@ function onWatchSuccess(position)
 	<div id='chat_div' style='position:fixed; right:10px; bottom:50px; z-index:304; border:1px solid red; '>
 		<a href='Javascript: chat_click();' style='position:absolute; top:-25px; right:0px;'><img src='chat.svg' style='width:50px; height:50px;'></a>
 		<div id='chat_window' style='display:inline; width:98%; height:200px; background-color:white; display:none;'>
-			<div id='chat_txt' style='width:99%; border:1px solid gray; height:150px; overflow:auto; background-color:white; color:#fac402;'>kkk</div>
+			<div id='chat_txt' style='width:99%; border:1px solid gray; height:150px; overflow:auto; background-color:white; color:#e3b202;'>kkk</div>
 			<input type='text' size=30 id='chat_send_text' style='z-index:305;'><input type='button' value='send' onclick='chat_send();' style='z-index:305;'>
 		</div>
 	</div>
@@ -757,7 +757,7 @@ function setme()
 
 	}
 
-document.getElementById("maptype").value=1;
+//document.getElementById("maptype").value=1;
 var curmap=1;
 
 function changemap()
